--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>
       welcome to skewer
     </h1>
+    <p> skewer is a programming language very similar to <a href="https://www.python.org/">python</a></p>
   </body>
 </html>
